                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 29-03-2005 fixed: Videodatabase wasn't retrieving boolean values from database correctly (ex. FrameRateAdjustment wherent being restored)
  - 29-03-2005 fixed: Incorrect options given to mplayer when framerateadjustement was enabled. Could have been cause of problems with autosync and subtitles.
  - 28-03-2005 updated: Chinese (Traditional) language file (Thnx to woozc)
  - 28-03-2004 updated: Polish language file (Thnx to napek)
  - 28-03-2005 added: user-agent to mplayer.conf, "MPEG" needed for old SHOUTcast-servers. Please leave intact.
  - 27-03-2005 changed: Made sure triggers submit a keypress wen released. Makes sure ff/rw resumes properly on trigger release
  - 27-05 2005 updated: mplayer.dll, fixes rewind jumps back to beginning when resuming playback.
  - 26-03-2005 changed: UseTags and FindRemoteThumbs are automatically enabled when a music scan starts, and restored when completed
  - 25-03-2005 fixed: tbn thumbnails on iso9660 discs
  - 23-03-2005 updated: Korean language file (Thnx to akoako)
  - 23-03-2004 updated: Polish language file (Thnx to napek)
  - 23-03-2005 fixed: ".." item was always hidden in DVD folders.
  - 22-03-2005 fixed: [ 1095213 ] Error handleing of xboxmediacenter.xml.
  - 22-03-2005 added: VideoPlayer.Cover infoimage to the infomanager.
  - 22-03-2005 fixed: Harddisk spin up when fast fowarding (or display of any control in full screen video).
  - 22-03-2005 fixed: The settings table in the video database needs clearing out for audio stream problems.
  - 21-03-2005 changed: dvd thumbs are no longer considered remote so they are cached regardless of the FindRemoteThumbs setting 